tests/ui/resolve/issue-6702.stderr
error[E0423]: expected function, tuple struct or tuple variant, found struct `Monster`
  --> $DIR/issue-6702.rs:7:14
   |
LL | / struct Monster {
LL | |     damage: isize
LL | | }
   | |_- `Monster` defined here
...
LL |       let _m = Monster();
   |                ^^^^^^^^^ help: use struct literal syntax instead: `Monster { damage: val }`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0423`.
